--- a/JOTWEB/css/common.css
+++ b/JOTWEB/css/common.css
@@ -1499,12 +1499,9 @@ input[type='text']:not(.BoxIcon):not(.CalendarIcon) {
     overflow-y: hidden;
 }
 
-
-
-
-/*ボタンCSS*/
-
-
+/* ------------------------------
+共通ボタンスタイル
+------------------------------ */
 .btn-sticky {
     text-decoration: none;
     height: 25px;
