--- a/JOTWEB/OIL/css/OIT0001D.css
+++ b/JOTWEB/OIL/css/OIT0001D.css
@@ -16,15 +16,33 @@
 /* #################１行目 ################# */
 /* 受注営業所(ラベル) */
 #WF_OFFICECODE_LABEL {
-    position:fixed; 
-    top:4.5em; 
-    left:2em; 
-    color:#000000;
-
+    position: fixed;
+    top: 4.5em;
+    left: 2em;
+    color: #000000;
     /*    font-weight:bold; 
     text-decoration:underline;*/
 }
 
+#WF_OFFICECODE_DUMMY {
+    position: fixed;
+    height: 20px;
+    width: 20px;
+    top: 4.7em;
+    left: 9em;
+    z-index: 3;
+}
+
+/*受注営業所コード(虫眼鏡アイコン ※ワンクリック用)*/
+#WF_OFFICECODE_ICON {
+    position: fixed;
+    height: 20px;
+    width: 20px;
+    top: 4.7em;
+    left: 9em;
+    cursor: pointer;
+    z-index: 2;
+}
 /*受注営業所コード */
 #WF_OFFICECODE {
     position: fixed;
@@ -32,15 +50,16 @@
     left: 9em;
     border-radius: 3px;
     padding-left: 21px;
-    Height :1.4em;
+    Height: 1.4em;
+    z-index: 1;
 }
     #WF_OFFICECODE input[type='text'] {
         Height: 1.4em;
-        Width : 10em;
+        Width : 11.5em;
     }
 
 /* #################２行目 ################# */
-/* 本社列車(ラベル) */
+/* 本線列車(ラベル) */
 #WF_HEADOFFICETRAIN_LABEL {
     position: fixed;
     top: 6.5em;
@@ -49,18 +68,29 @@
     /*    font-weight:bold; 
     text-decoration:underline;*/
 }
+/*本線列車コード(虫眼鏡アイコン ※ワンクリック用)*/
+#WF_HEADOFFICETRAIN_ICON {
+    position: fixed;
+    height: 20px;
+    width: 20px;
+    top: 6.7em;
+    left: 9em;
+    cursor: pointer;
+    z-index: 2;
+}
 
-/*本社列車コード */
+/*本線列車コード */
 #WF_HEADOFFICETRAINCODE {
     position: fixed;
     top: 6.5em;
     left: 9em;
     border-radius: 3px;
     padding-left: 21px;
+    z-index: 1;
 }
     #WF_HEADOFFICETRAINCODE input[type='text'] {
         Height: 1.4em;
-        Width: 10em;
+        Width: 11.5em;
     }
 
 /* #################３行目 ################# */
@@ -75,6 +105,17 @@
     text-decoration:underline;*/
 }
 
+/*発駅コード(虫眼鏡アイコン ※ワンクリック用)*/
+#WF_DEPSTATION_ICON {
+    position: fixed;
+    height: 20px;
+    width: 20px;
+    top: 8.7em;
+    left: 9em;
+    cursor: pointer;
+    z-index: 2;
+}
+
 /*発駅コード */
 #WF_DEPSTATIONCODE {
     position: fixed;
@@ -82,22 +123,23 @@
     left: 9em;
     border-radius: 3px;
     padding-left: 21px;
+    z-index: 1;
 }
 
     #WF_DEPSTATIONCODE input[type='text'] {
         Height: 1.4em;
-        Width: 10em;
+        Width: 11.5em;
     }
 
 /* 発駅名 */
 #WF_DEPSTATIONNAME {
     position: fixed;
     top: 8.5em;
-    left: 20em;
+    left: 20.5em;
 }
     #WF_DEPSTATIONNAME input[type=text] {
         Height: 1.4em;
-        Width: 10em;
+        Width: 11.5em;
     }
 
 /* -----------------２列目 ----------------- */
@@ -105,36 +147,48 @@
 #WF_ARRSTATION_LABEL {
     position: fixed;
     top: 8.5em;
-    left: 39em;
+    left: 38em;
     color: #000000;
     /*    font-weight:bold; 
     text-decoration:underline;*/
+}
+
+/*着駅コード(虫眼鏡アイコン ※ワンクリック用)*/
+#WF_ARRSTATION_ICON {
+    position: fixed;
+    height: 20px;
+    width: 20px;
+    top: 8.7em;
+    left: 43em;
+    cursor: pointer;
+    z-index: 2;
 }
 
 /*着駅 */
 #WF_ARRSTATION {
     position: fixed;
     top: 8.5em;
-    left: 41em;
+    left: 43em;
     border-radius: 3px;
     padding-left: 21px;
+    z-index: 1;
 }
 
     #WF_ARRSTATION input[type='text'] {
         Height: 1.4em;
-        Width: 10em;
+        Width: 11.5em;
     }
 
 /* 着駅名 */
 #WF_ARRSTATIONNAME {
     position: fixed;
     top: 8.5em;
-    left: 52em;
+    left: 54.5em;
 }
 
     #WF_ARRSTATIONNAME input[type=text] {
         Height: 1.4em;
-        Width: 10em;
+        Width: 11.5em;
     }
 
 /* #################４行目 ################# */
@@ -149,6 +203,17 @@
     text-decoration:underline;*/
 }
 
+/*(予定)積込日(カレンダーアイコン ※ワンクリック用)*/
+#WF_LOADINGDATE_ICON {
+    position: fixed;
+    height: 20px;
+    width: 20px;
+    top: 10.7em;
+    left: 9em;
+    cursor: pointer;
+    z-index: 2;
+}
+
 /*(予定)積込日 */
 #WF_LOADINGDATE {
     position: fixed;
@@ -156,11 +221,12 @@
     left: 9em;
     border-radius: 3px;
     padding-left: 21px;
+    z-index: 1;
 }
 
     #WF_LOADINGDATE input[type='text'] {
         Height: 1.4em;
-        Width: 10em;
+        Width: 11.5em;
     }
 
 /* -----------------２列目 ----------------- */
@@ -174,18 +240,30 @@
     text-decoration:underline;*/
 }
 
+/*(予定)発日(カレンダーアイコン ※ワンクリック用)*/
+#WF_DEPDATE_ICON {
+    position: fixed;
+    height: 20px;
+    width: 20px;
+    top: 10.7em;
+    left: 25em;
+    cursor: pointer;
+    z-index: 2;
+}
+
 /*(予定)発日 */
 #WF_DEPDATE {
     position: fixed;
     top: 10.5em;
-    left: 24em;
+    left: 25em;
     border-radius: 3px;
     padding-left: 21px;
+    z-index: 1;
 }
 
     #WF_DEPDATE input[type='text'] {
         Height: 1.4em;
-        Width: 10em;
+        Width: 11.5em;
     }
 
 /* -----------------３列目 ----------------- */
@@ -193,49 +271,72 @@
 #WF_ARRDATE_LABEL {
     position: fixed;
     top: 10.5em;
-    left: 37em;
+    left: 38em;
     color: #000000;
     /*    font-weight:bold; 
     text-decoration:underline;*/
 }
 
-/*積車着日 */
+/*(予定)積車着日(カレンダーアイコン ※ワンクリック用)*/
+#WF_ARRDATE_ICON {
+    position: fixed;
+    height: 20px;
+    width: 20px;
+    top: 10.7em;
+    left: 43em;
+    cursor: pointer;
+    z-index: 2;
+}
+
+/*(予定)積車着日 */
 #WF_ARRDATE {
     position: fixed;
     top: 10.5em;
-    left: 41em;
+    left: 43em;
     border-radius: 3px;
     padding-left: 21px;
+    z-index: 1;
 }
 
     #WF_ARRDATE input[type='text'] {
         Height: 1.4em;
-        Width: 10em;
+        Width: 11.5em;
     }
 
 /* -----------------４列目 ----------------- */
-/* 受入日(ラベル) */
+/* (予定)受入日(ラベル) */
 #WF_ACCDATE_LABEL {
     position: fixed;
     top: 10.5em;
-    left: 54em;
+    left: 56em;
     color: #000000;
     /*    font-weight:bold; 
     text-decoration:underline;*/
 }
 
-/* 受入日 */
+/*(予定)受入日(カレンダーアイコン ※ワンクリック用)*/
+#WF_ACCDATE_ICON {
+    position: fixed;
+    height: 20px;
+    width: 20px;
+    top: 10.7em;
+    left: 60em;
+    cursor: pointer;
+    z-index: 2;
+}
+
+/* (予定)受入日 */
 #WF_ACCDATE {
     position: fixed;
     top: 10.5em;
-    left: 57em;
+    left: 60em;
     border-radius: 3px;
     padding-left: 21px;
 }
 
     #WF_ACCDATE input[type='text'] {
         Height: 1.4em;
-        Width: 10em;
+        Width: 11.5em;
     }
 
 /* #################５行目 ################# */
