--- a/JOTWEB/OIL/css/OIT0002S.css
+++ b/JOTWEB/OIL/css/OIT0002S.css
@@ -113,7 +113,7 @@
 #WF_SW_LABEL {
     position: fixed;
     height: 50px;
-    width: 140px;
+    width: 210px;
     top: calc(60% - 50px/2);
     left: calc(43.5% - 70px/2);
     color: #737373;
@@ -153,11 +153,11 @@
     flex: 1;
 }
 
-.inline-radio input {
-    height: 1.05em;
-    width: 8.65em;
-    opacity: 0;
-}
+    .inline-radio input {
+        height: 50px;
+        width: 140px;
+        opacity: 0;
+    }
 
 .inline-radio label {
     position: absolute;
