201912/27_COMMIT ボタン非活性の時のマウスオーバー。文字の色を変えないようにする。

--- a/JOTWEB/css/common.css
+++ b/JOTWEB/css/common.css
@@ -1526,4 +1526,5 @@ input[type='text']:not(.BoxIcon):not(.CalendarIcon) {
         background-image: none;
         background-color: #ccc;
         border-color: #ccc;
+        color: #2bb6c1;
     }
