--- a/JOTWEB/OIL/css/OIM0005C.css
+++ b/JOTWEB/OIL/css/OIM0005C.css
@@ -1,74 +1,9 @@
-﻿/* タンク車マスタ登録画面*/
-/*JOT車番見出し*/
-/*#WF_TANKNUMBER_LABEL {
+﻿/*虫眼鏡アイコン ※ワンクリック用*/
+.ICON {
     position: fixed;
-    top: 5em;
-    left: 40em;
-    color: #737373;
-}*/
-
-/*JOT車番input tag*/
-/*#WF_TANKNUMBER {
-    position: fixed;
-    top: 6.5em;
-    left: 40em;
-    border-radius: 3px;
-    padding-left: 21px;
-    height: 2em;
-    width: 10em;
-}*/
-
-/*JOT車番名称*/
-/*#WF_TANKNUMBER_TEXT {
-    position: fixed;
-    top: 6.8em;
-    left: 51em;
-    height: 2em;
-    width: 10em;
-}*/
-
-/*型式見出し*/
-/*#WF_MODEL_LABEL {
-    position: fixed;
-    top: 9.5em;
-    left: 40em;
-    color: #737373;
-}*/
-
-/*型式input tag*/
-/*#WF_MODEL {
-    position: fixed;
-    top: 11em;
-    left: 40em;
-    border-radius: 3px;
-    padding-left: 21px;
-    height: 2em;
-    width: 10em;
-}*/
-
-/*テキストコードinput tag*/
-input[type='text'] {
-    padding-left: 1.25em;
-}
-
-    input[type='text']:not(.BoxIcon):not(.CalendarIcon) {
-        padding-right: 1.25em;
-    }
-
-.WF_TEXTBOX_CSS:not(.BoxIcon):not(.CalendarIcon)::-ms-clear {
-    margin-right: -1.25em;
-} 
-
-/*左Boxオープン用虫眼鏡アイコン*/
-.BoxIcon {
-    background-image: url(../img/leftbox.png);
-    background-repeat: no-repeat;
-    background-position: 1px;
-}
-
-/*カレンダーオープン用アイコン*/
-.CalendarIcon {
-    background-image: url(../img/calendar.png);
-    background-repeat: no-repeat;
-    background-position: 1px;
+    height: 50px;
+    width: 50px;
+    top: 4px;
+    left: 15px;
+    cursor: pointer;
 }
