--- a/JOTWEB/OIL/css/OIT0002S.css
+++ b/JOTWEB/OIL/css/OIT0002S.css
@@ -9,6 +9,16 @@
     color: #737373;
 }
 
+/*空車着駅コード(虫眼鏡アイコン ※ワンクリック用)*/
+#WF_RETSTATION_ICON {
+    position: fixed;
+    height: 20px;
+    width: 20px;
+    top: calc(20.5% - 50px/2);
+    left: calc(44.5% - 140px/2);
+    cursor: pointer;
+}
+
 /*空車着駅コードinput tag*/
 #WF_RETSTATION {
     position: fixed;
@@ -40,6 +50,16 @@
     color: #737373;
 }
 
+/*開始年月日(虫眼鏡アイコン ※ワンクリック用)*/
+#WF_STYMD_ICON {
+    position: fixed;
+    height: 20px;
+    width: 20px;
+    top: calc(32.5% - 50px/2);
+    left: calc(44.5% - 140px/2);
+    cursor: pointer;
+}
+
 /*開始年月日input tag*/
 #WF_STYMD {
     position: fixed;
@@ -62,6 +82,16 @@
     top: calc(36% - 50px/2);
     left: calc(43.5% - 70px/2);
     color: #737373;
+}
+
+/*終了年月日(虫眼鏡アイコン ※ワンクリック用)*/
+#WF_ENDYMD_ICON {
+    position: fixed;
+    height: 20px;
+    width: 20px;
+    top: calc(40.5% - 50px/2);
+    left: calc(44.5% - 140px/2);
+    cursor: pointer;
 }
 
 /*終了年月日input tag*/
@@ -125,20 +155,6 @@
     height: 35px;
     top: calc(64% - 50px/2);
     left: calc(43.5% - 70px/2);
-}
-
-/*左Boxオープン用虫眼鏡アイコン*/
-.BoxIcon {
-    background-image: url(../img/leftbox.png);
-    background-repeat: no-repeat;
-    background-position: 1px;
-}
-
-/*カレンダーオープン用アイコン*/
-.CalendarIcon {
-    background-image: url(../img/calendar.png);
-    background-repeat: no-repeat;
-    background-position: 1px;
 }
 
 .inline-radio {
