テキストボックスサイズ統一、単票入力統一化CSS

--- a/JOTWEB/OIL/OILMasterPage.Master
+++ b/JOTWEB/OIL/OILMasterPage.Master
@@ -21,7 +21,7 @@
     <asp:ContentPlaceHolder ID="head" runat="server" />
 </head>
 
-<body onload ="InitDisplay(); AutoCursor(); ConfirmWindow();">
+<body spellcheck="false">
 
     <form id="OILMasterPage" runat="server"
                 ondragstart="f_dragEventCancel(event)"
